<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/registerHeader"
        android:background="@color/white"
        android:layout_width="311dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chunkfive"
        android:text="@string/register_header"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/white"
        android:layout_width="334dp"
        android:layout_height="215dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerHeader">


        <EditText
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registration_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/registration_surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_surname_hint"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/registrationContinueButton"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:text="@string/button_continue"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/registrationBackButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/registrationBackButton"
        android:background="@color/white"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/backButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>