<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/headerText"
        android:background="@color/white"
        android:layout_width="336dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chunkfive"
        android:text="@string/activity_main_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <LinearLayout
        android:layout_width="344dp"
        android:background="@color/white"
        android:layout_height="148dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginButton"
            android:background="@color/white"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="503dp" />

        <Button
            android:id="@+id/registrationButton"
            android:background="@color/white"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="502dp" />

        <Button
            android:id="@+id/exitButton"
            android:background="@color/white"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:text="@string/button_exit"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="254dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:background="@color/white"
        android:layout_width="379dp"
        android:layout_height="269dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food" />

</androidx.constraintlayout.widget.ConstraintLayout>